WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132941
[iOS][WK2] WKWebView sends invalid content offsets at the end of animated resize
https://bugs.webkit.org/show_bug.cgi?id=132941
Summary
[iOS][WK2] WKWebView sends invalid content offsets at the end of animated resize
Benjamin Poulain
Reported
2014-05-14 21:07:54 PDT
[iOS][WK2] WKWebView sends invalid content offsets at the end of animated resize
Attachments
Patch
(3.11 KB, patch)
2014-05-14 21:11 PDT
,
Benjamin Poulain
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-05-14 21:11:40 PDT
Created
attachment 231488
[details]
Patch
Benjamin Poulain
Comment 2
2014-05-14 21:13:17 PDT
<
rdar://problem/16921557
>
Tim Horton
Comment 3
2014-05-14 23:15:45 PDT
Comment on
attachment 231488
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231488&action=review
Yikes.
> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:1612 > + // an invalid contentOffset. The real content offset is only set bellow.
typo "bellow"
Benjamin Poulain
Comment 4
2014-05-15 13:04:47 PDT
Committed
r168907
: <
http://trac.webkit.org/changeset/168907
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug