[iOS][WK2] WKWebView sends invalid content offsets at the end of animated resize https://bugs.webkit.org/show_bug.cgi?id=132941 <rdar://problem/16921557>

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-05-15
Reviewed by Tim Horton.

Since we cannot change the scale and content inset simultaneously while accounting for the obscured insets,
we end up with invalid contentOffsets.

To work around the problem, change the content scale outside of UIScrollView to ensure none of the side effect
happens.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _endAnimatedResize]):


Canonical link: https://commits.webkit.org/151014@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168907 268f45cc-cd09-0410-ab3c-d52691b4dbfc